--- a/install.html
+++ b/install.html
@@ -85,6 +85,7 @@
 
     var body = document.body;
     body.appendChild(display);
+    var scrollTop = body.scrollTop;
     body.scrollTop = 0;
 
     var numWords = words.length;
@@ -99,11 +100,16 @@
 
         var adjustedMs = ms;
         if (word.indexOf(".") != -1) {
-          adjustedMs *= 1.8;
+          adjustedMs *= 1.5;
         }
         else if (word.indexOf(",") != -1) {
-          adjustedMs *= 1.4;
+          adjustedMs *= 1.3;
         }
+        else if (word.length > 8) {
+          /* long words slow down pr every 2 char */
+          adjustedMs += (word.length - 8) / 2 * 30;
+        }
+
         timeout = setTimeout(nextWord, adjustedMs);
       }
       else {
@@ -122,6 +128,7 @@
         timeout = null;
       }
 
+      body.scrollTop = scrollTop;
       var parent = display.parentNode;
       parent.removeChild(display);
     };
